Add styling for tables

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,3 +204,19 @@ pre {
         }
     }
 }
+
+/**
+ * Tables
+ */
+table, th, td {
+    border: 1px solid black;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: $spacing-unit / 2;
+}
