Add link to RSS feed in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,10 @@
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
+
+          <li>
+            {% include icon-rss.html %}
+          </li>
         </ul>
       </div>
 
