Add subscribe form at the end of each post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,11 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
+
+    <h2>Want to learn more?</h2>
+    <p>Enter your information below to receive a FREE guide on improving Eclipse performance:</p>
+
+    {% include subscription-form.html %}
   </div>
 
 </article>
